CV + style logo

--- a/Public/index.html
+++ b/Public/index.html
@@ -10,8 +10,6 @@
 
 <!-- Emmet : div>(div>h2+img+ul>li*5)+(div>h1)+(div>h3+(h4+p)*4)*2+(div>(h4+p)*2) -->
 
-<!-- Emmet with class : div.cv>(div.cv__presentation>h2.cv__presentation__name+img.cv__presentation__picture+ul.cv__presentation__liste>li.cv__presentation__items*5)+(h1.cv__title)+(div.cv__experience>h3.cv__experience__title+(h4.cv__experience__date+p.cv__experience__detail)*4)*2+(div.cv__formation>h3.cv__formation__title(h4.cv__formation__date+p.cv__formation__details)*2) -->
-
 <div class="cv">
   <div class="presentation">
     <h2 class="presentation__name">Osée Ralantoarison</h2>
@@ -57,7 +55,7 @@
         <img src="./image/html-5.png" alt="Html5" class="formation__logo">
         <img src="./image/css-3.png" alt="CSS" class="formation__logo">
         <img src="./image/javascript-seeklogo.com.svg" alt="JS" class="formation__logo">
-        <img src="./image/React-icon.svg.png" alt="React" class="formation__logo-react">
+        <img src="./image/rereact.png" alt="React" class="formation__logo-react">
         <img src="./image/popopostgresql-11-1175122.webp" alt="Postgres" class="formation__logo">
       </div>
         <h4 class="formation__category">Premier pas</h4>
