Different style + presentation

--- a/Public/index.html
+++ b/Public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <Link rel="StyleSheet" href="reset.css" type="text/css"/>
   <Link rel="StyleSheet" href="style.css" type="text/css"/>
   <title>Curriculum Vitae Osée</title>
 </head>
@@ -12,15 +13,20 @@
 
 <div class="cv">
   <div class="presentation">
-    <h2 class="presentation__name">Osée Ralantoarison</h2>
+    <p class="presentation__text">Autodidacte depuis plus d'une année, afin de découvrir le monde de la programmation, je me suis beaucoup intéressé à la programmation orienté web.&nbsp;J'ai donc décidé de me reconvertir et de suivre une formation intensive avec l'école O'clock en développement web Fullstack Javascript spécialité React.Js. Je suis actuellement à la recherche de ma première expérience professionnelle afin de faire grandir mon expérience.
+    </p>
     <img src="./image/photo-backround.png" alt="photo" class="presentation__picture">
-    <ul class="presentation__list">
-      <li class="presentation__list__items">o.ralanto@gmail.com</li>
-      <li class="presentation__list__items">+336 75 84 23 34</li>
-      <li class="presentation__list__items">Titulaire du permis B</li>
-      <li class="presentation__list__items">Ville la grand (France)</li>
-      <li class="presentation__list__items">Français</li>
-    </ul>
+    <div class="presentation__bloc">
+      <ul class="presentation__list">
+        <li class="presentation__list__items">Osée</li>
+        <li class="presentation__list__items">Ralantoarison</li>
+        <li class="presentation__list__items">o.ralanto@gmail.com</li>
+        <li class="presentation__list__items">+336 75 84 23 34</li>
+        <li class="presentation__list__items">Titulaire du permis B</li>
+        <li class="presentation__list__items">Ville la grand (France)</li>
+        <li class="presentation__list__items">Français</li>
+      </ul>
+    </div>
   </div>
   <h1 class="title">DEVELOPPEUR WEB FULLSTACK (JS)</h1>
   <div class="main">
