--- a/Public/index.html
+++ b/Public/index.html
@@ -35,7 +35,7 @@
       <h4 class="experience__subtitle">Actuellement : Apothéose O'Clock</h4>
       <p class="experience__detail">Projet de fin de formation en tant que lead développeur web front avec React.js</p>
       <h4 class="experience__subtitle">Depuis Octobre 2020 : Challenge en cours de formation</h4>
-      <p class="experience__detail">Nombreux projet concret réaliser en groupe et en autonomie avec HTML5, CSS3, Javascript (React, Node, Express, sequelize, active record..?), Postgres, SQL et découverte mangoDB </p>
+      <p class="experience__detail">Nombreux projet concret réaliser en groupe et en autonomie avec HTML5, CSS3, Javascript (React, Node, Express, sequelize, active record), Postgres, SQL et découverte mangoDB </p>
       <h4 class="experience__subtitle">Depuis Décembre 2019 : Autodidacte</h4>
       <p class="experience__detail">Découverte du monde du développement sur de nombreux cours gratuit et payant tel que Open Classroom, HardCoder, Youtube, CodeInGame et d'autres</p>
       <h4 class="experience__subtitle">Centre d'interet</h4>
