--- a/Public/index.html
+++ b/Public/index.html
@@ -15,7 +15,7 @@
   <div class="presentation">
     <p class="presentation__text">Autodidacte depuis plus d'une année, afin de découvrir le monde de la programmation, je me suis beaucoup intéressé à la programmation orienté web.&nbsp;J'ai donc décidé de me reconvertir et de suivre une formation intensive avec l'école O'clock en développement web Fullstack Javascript spécialité React.Js. Je suis actuellement à la recherche de ma première expérience professionnelle afin de faire grandir mon expérience.
     </p>
-    <img src="./image/photo-backround.png" alt="photo" class="presentation__picture">
+    <img src="./image/Photo-profil.png" alt="photo" class="presentation__picture">
     <div class="presentation__bloc">
       <ul class="presentation__list">
         <li class="presentation__list__items">Osée</li>
@@ -35,9 +35,9 @@
       <h4 class="experience__subtitle">Actuellement : Apothéose O'Clock</h4>
       <p class="experience__detail">Projet de fin de formation en tant que lead développeur web front avec React.js</p>
       <h4 class="experience__subtitle">Depuis Octobre 2020 : Challenge en cours de formation</h4>
-      <p class="experience__detail">Nombreux projet concret réaliser en groupe et en autonomie avec HTML5, CSS3, Javascript (React, Node, Express, sequelize, active record), Postgres, SQL et découverte mangoDB </p>
+      <p class="experience__detail">Nombreux projet concret réaliser en groupe et en autonomie avec HTML5, CSS3, Javascript (React, Redux, Node, Express, Sequelize, Active record), Postgres, SQL et découverte mangoDB </p>
       <h4 class="experience__subtitle">Depuis Décembre 2019 : Autodidacte</h4>
-      <p class="experience__detail">Découverte du monde du développement sur de nombreux cours gratuit et payant tel que Open Classroom, HardCoder, Youtube, CodeInGame et d'autres</p>
+      <p class="experience__detail">Découverte du monde du développement sur de nombreux cours gratuit et payant sur différentes plateforme comme Open Classroom, HardCoder, Youtube, CodeInGame, CodeCombat et d'autres</p>
       <h4 class="experience__subtitle">Centre d'interet</h4>
         <ul class="experience__detail">
           <li class="experience__detail">Nouvelles technologies</li>
